--- a/dashboard.html
+++ b/dashboard.html
@@ -250,18 +250,29 @@
         </div>
 
         <div id="view-course-manager" class="view-section hidden flex-1 flex flex-col h-full bg-white">
-            <div class="h-16 border-b border-gray-200 flex items-center justify-between px-6 bg-white shrink-0 z-10 shadow-sm">
-                <h2 class="text-xl font-bold text-gray-800"><i class="fa-solid fa-shapes text-orange-500 mr-2"></i>Quản lý Trang chủ & Khóa học</h2>
+            <div class="flex flex-col md:flex-row md:h-16 border-b border-gray-200 justify-between items-start md:items-center p-4 md:px-6 bg-white shrink-0 z-10 shadow-sm gap-3">
+                <h2 class="text-lg md:text-xl font-bold text-gray-800 flex items-center">
+                    <i class="fa-solid fa-shapes text-orange-500 mr-2"></i>
+                    <span>QL Trang chủ & Khóa học</span>
+                </h2>
                 
-                <div class="flex gap-2">
-                    <button onclick="window.openHeroModal()" class="bg-orange-100 text-orange-600 px-4 py-2 rounded-lg font-bold hover:bg-orange-200 transition-colors text-sm">
-                        <i class="fa-solid fa-paintbrush mr-1"></i> Sửa Banner
+                <div class="flex gap-2 w-full md:w-auto">
+                    <button onclick="window.openHeroModal()" title="Sửa Banner" 
+                        class="flex-1 md:flex-none h-10 md:h-auto px-3 py-2 bg-orange-100 text-orange-600 rounded-lg font-bold hover:bg-orange-200 transition-colors text-xs md:text-sm flex items-center justify-center gap-1">
+                        <i class="fa-solid fa-paintbrush"></i> 
+                        <span class="hidden sm:inline">Banner</span>
                     </button>
-                    <button onclick="window.openPaymentConfigModal()" class="bg-blue-100 text-blue-600 px-4 py-2 rounded-lg font-bold hover:bg-blue-200 transition-colors text-sm">
-                        <i class="fa-solid fa-credit-card mr-1"></i> Cài đặt Thanh toán
+
+                    <button onclick="window.openPaymentConfigModal()" title="Cài đặt Thanh toán"
+                        class="flex-1 md:flex-none h-10 md:h-auto px-3 py-2 bg-blue-100 text-blue-600 rounded-lg font-bold hover:bg-blue-200 transition-colors text-xs md:text-sm flex items-center justify-center gap-1">
+                        <i class="fa-solid fa-credit-card"></i> 
+                        <span class="hidden sm:inline">Thanh toán</span>
                     </button>
-                    <button onclick="window.toggleModal('courseModal', true)" class="bg-blue-600 text-white px-4 py-2 rounded-lg font-bold hover:bg-blue-700 transition-colors text-sm shadow-lg shadow-blue-200">
-                        <i class="fa-solid fa-plus mr-1"></i> Thêm khóa mới
+
+                    <button onclick="window.toggleModal('courseModal', true)" 
+                        class="flex-1 md:flex-none h-10 md:h-auto px-3 py-2 bg-blue-600 text-white rounded-lg font-bold hover:bg-blue-700 transition-colors text-xs md:text-sm shadow-lg shadow-blue-200 flex items-center justify-center gap-1 whitespace-nowrap">
+                        <i class="fa-solid fa-plus"></i> 
+                        <span>Thêm khóa</span>
                     </button>
                 </div>
             </div>
