--- a/dashboard.html
+++ b/dashboard.html
@@ -1666,20 +1666,23 @@
 
         // --- LOGIC CẤU HÌNH THANH TOÁN ---
         window.openPaymentConfigModal = async () => {
-            window.showNotification("Đang tải thông tin...", "info");
+            // 1. Mở modal ngay lập tức để người dùng không phải chờ
+            window.toggleModal('paymentConfigModal', true);
+
             try {
+                // 2. Âm thầm tải dữ liệu cũ (nếu có)
                 const docSnap = await getDoc(doc(db, "site_settings", "payment_config"));
                 if (docSnap.exists()) {
                     const d = docSnap.data();
-                    document.getElementById('confBankId').value = d.BANK_ID || "";
-                    document.getElementById('confAccountNo').value = d.ACCOUNT_NO || "";
-                    document.getElementById('confAccountName').value = d.ACCOUNT_NAME || "";
-                    document.getElementById('confTemplate').value = d.TEMPLATE || "compact2";
+                    // Điền dữ liệu vào form
+                    if(document.getElementById('confBankId')) document.getElementById('confBankId').value = d.BANK_ID || "970422";
+                    if(document.getElementById('confAccountNo')) document.getElementById('confAccountNo').value = d.ACCOUNT_NO || "";
+                    if(document.getElementById('confAccountName')) document.getElementById('confAccountName').value = d.ACCOUNT_NAME || "";
+                    if(document.getElementById('confTemplate')) document.getElementById('confTemplate').value = d.TEMPLATE || "compact2";
                 }
-                window.toggleModal('paymentConfigModal', true);
             } catch(e) { 
-                console.error(e);
-                window.toggleModal('paymentConfigModal', true);
+                // Nếu lỗi (do mạng hoặc chưa có quyền), chỉ log ra console, KHÔNG hiện thông báo cho user
+                console.warn("Chưa tải được cấu hình thanh toán cũ:", e);
             }
         };
 
