--- a/student.html
+++ b/student.html
@@ -883,6 +883,7 @@ async function loadExamHistory(user) {
 
 // Hàm lọc và vẽ bảng
 // --- HÀM LỌC LỊCH SỬ (ĐÃ FIX LỖI TARGET) ---
+// --- HÀM LỌC LỊCH SỬ (ĐÃ FIX LỖI TARGET) ---
 window.filterHistory = (filterType) => {
     // 1. Xử lý UI nút bấm (Active State)
     const buttons = document.querySelectorAll('.history-filter');
@@ -920,6 +921,7 @@ window.filterHistory = (filterType) => {
     renderHistoryRows(filtered);
 }
 
+// --- HÀM VẼ BẢNG LỊCH SỬ (ĐÃ FIX HIỂN THỊ) ---
 // --- HÀM VẼ BẢNG LỊCH SỬ (ĐÃ FIX HIỂN THỊ) ---
 function renderHistoryRows(data) {
     const tbody = document.getElementById('historyListBody');
