--- a/course-manager.html
+++ b/course-manager.html
@@ -288,9 +288,12 @@
         // Nếu file này chạy chung domain với dashboard.html thì thường trình duyệt đã cache config, nhưng tốt nhất nên khai báo lại.
         // Bạn hãy thay thế đoạn config này bằng config thực của bạn nếu nó chưa chạy.
         const firebaseConfig = {
-            // ... (Điền config Firebase của bạn vào đây nếu chưa có) ...
-            // Hiện tại tôi giả định bạn đã có file config hoặc file này import từ file js chung.
-            // Nếu chưa, hãy copy từ dashboard.html sang.
+            apiKey: "AIzaSyCqAX3x1MbJ3do7m3EaH9JA4kFuVhlAc78",
+            authDomain: "lms-thitracnghiem.firebaseapp.com",
+            projectId: "lms-thitracnghiem",
+            storageBucket: "lms-thitracnghiem.firebasestorage.app",
+            messagingSenderId: "760187217240",
+            appId: "1:760187217240:web:d043cd5808c349f87a712d"
         };
         
         // Vì tôi không biết chính xác config của bạn, tôi sẽ khởi tạo app. 
