--- a/course-manager.html
+++ b/course-manager.html
@@ -280,7 +280,12 @@
 
         // --- CẤU HÌNH FIREBASE ---
         const firebaseConfig = {
-            // DÁN CONFIG CỦA BẠN VÀO ĐÂY
+            apiKey: "AIzaSyCqAX3x1MbJ3do7m3EaH9JA4kFuVhlAc78",
+            authDomain: "lms-thitracnghiem.firebaseapp.com",
+            projectId: "lms-thitracnghiem",
+            storageBucket: "lms-thitracnghiem.firebasestorage.app",
+            messagingSenderId: "760187217240",
+            appId: "1:760187217240:web:d043cd5808c349f87a712d"
         };
 
         const app = initializeApp(firebaseConfig);
