--- a/course-manager.html
+++ b/course-manager.html
@@ -263,7 +263,12 @@
 
         // CONFIG FIREBASE CỦA BẠN (DÁN VÀO ĐÂY)
         const firebaseConfig = {
-            // ...
+            apiKey: "AIzaSyCqAX3x1MbJ3do7m3EaH9JA4kFuVhlAc78",
+            authDomain: "lms-thitracnghiem.firebaseapp.com",
+            projectId: "lms-thitracnghiem",
+            storageBucket: "lms-thitracnghiem.firebasestorage.app",
+            messagingSenderId: "760187217240",
+            appId: "1:760187217240:web:d043cd5808c349f87a712d"
         };
 
         const app = initializeApp(firebaseConfig);
