--- a/course-manager.html
+++ b/course-manager.html
@@ -103,26 +103,36 @@
             <div class="p-8 space-y-6 overflow-y-auto custom-scrollbar">
                 <input type="hidden" id="courseId">
                 
-                <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
-                    <div class="col-span-2">
-                        <label class="block text-xs font-black text-gray-500 uppercase mb-2 ml-1">Tên khóa học <span class="text-red-500">*</span></label>
-                        <input type="text" id="cTitle" class="w-full px-5 py-3 border border-gray-200 rounded-xl focus:border-brand focus:ring-4 focus:ring-brand/10 outline-none transition-all font-bold text-gray-700 placeholder-gray-300" placeholder="VD: Luyện thi Toán 12 Cấp tốc...">
-                    </div>
-                    <div>
-                        <label class="block text-xs font-black text-gray-500 uppercase mb-2 ml-1">Giá bán (VNĐ)</label>
-                        <div class="relative">
-                            <span class="absolute left-4 top-3 text-gray-400 font-bold">₫</span>
-                            <input type="number" id="cPrice" class="w-full pl-8 pr-4 py-3 border border-gray-200 rounded-xl focus:border-brand outline-none font-semibold" placeholder="0">
-                        </div>
-                    </div>
-                    <div>
-                        <label class="block text-xs font-black text-gray-500 uppercase mb-2 ml-1">Học viên ảo</label>
-                        <div class="relative">
-                            <span class="absolute left-4 top-3 text-gray-400"><i class="fa-solid fa-users"></i></span>
-                            <input type="number" id="cStudents" class="w-full pl-10 pr-4 py-3 border border-gray-200 rounded-xl focus:border-brand outline-none font-semibold" placeholder="0">
-                        </div>
-                    </div>
-                </div>
+                <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
+    <div class="col-span-1 md:col-span-3">
+        <label class="block text-xs font-black text-gray-500 uppercase mb-2 ml-1">Tên khóa học <span class="text-red-500">*</span></label>
+        <input type="text" id="cTitle" class="w-full px-5 py-3 border border-gray-200 rounded-xl focus:border-brand focus:ring-4 focus:ring-brand/10 outline-none transition-all font-bold text-gray-700 placeholder-gray-300" placeholder="VD: Luyện thi Toán 12 Cấp tốc...">
+    </div>
+
+    <div>
+        <label class="block text-xs font-black text-gray-500 uppercase mb-2 ml-1">Giá gốc (Niêm yết)</label>
+        <div class="relative">
+            <span class="absolute left-4 top-3 text-gray-400 font-bold line-through">₫</span>
+            <input type="number" id="cOriginalPrice" class="w-full pl-8 pr-4 py-3 border border-gray-200 rounded-xl focus:border-brand outline-none font-semibold text-gray-500" placeholder="VD: 500000">
+        </div>
+    </div>
+
+    <div>
+        <label class="block text-xs font-black text-gray-500 uppercase mb-2 ml-1">Giá bán (Khuyến mãi)</label>
+        <div class="relative">
+            <span class="absolute left-4 top-3 text-brand font-bold">₫</span>
+            <input type="number" id="cPrice" class="w-full pl-8 pr-4 py-3 border border-brand/30 bg-teal-50/30 rounded-xl focus:border-brand outline-none font-bold text-brand" placeholder="VD: 299000">
+        </div>
+    </div>
+
+    <div>
+        <label class="block text-xs font-black text-gray-500 uppercase mb-2 ml-1">Học viên ảo</label>
+        <div class="relative">
+            <span class="absolute left-4 top-3 text-gray-400"><i class="fa-solid fa-users"></i></span>
+            <input type="number" id="cStudents" class="w-full pl-10 pr-4 py-3 border border-gray-200 rounded-xl focus:border-brand outline-none font-semibold" placeholder="0">
+        </div>
+    </div>
+</div>
 
                 <div>
                     <label class="block text-xs font-black text-gray-500 uppercase mb-2 ml-1">Mô tả ngắn</label>
