--- a/course-player.html
+++ b/course-player.html
@@ -352,23 +352,38 @@
         };
 
         // Logic Toggle Sidebar (Đã fix lỗi xung đột)
+        // [ĐÃ SỬA LỖI] Logic Đóng/Mở Sidebar cho cả PC và Mobile
         window.toggleSidebar = () => {
             const sb = document.getElementById('sidebar');
             const overlay = document.getElementById('mobileOverlay');
+            
+            // Kiểm tra kích thước màn hình
             if (window.innerWidth >= 768) {
-                // Desktop Toggle
+                // --- LOGIC CHO MÁY TÍNH (PC) ---
+                // Chỉ xử lý co giãn chiều rộng
                 if (sb.classList.contains('desktop-expanded')) {
+                    // Đang mở -> Thu gọn
                     sb.classList.remove('desktop-expanded');
                     sb.classList.add('desktop-collapsed');
                 } else {
+                    // Đang gọn -> Mở ra
                     sb.classList.remove('desktop-collapsed');
                     sb.classList.add('desktop-expanded');
                 }
             } else {
-                // Mobile Toggle
-                sb.classList.toggle('mobile-hide');
-                sb.classList.toggle('mobile-show');
-                overlay.classList.toggle('hidden');
+                // --- LOGIC CHO ĐIỆN THOẠI (MOBILE) ---
+                // Xử lý trượt ra vào bằng class Tailwind '-translate-x-full'
+                
+                // Kiểm tra xem class -translate-x-full có tồn tại không
+                // Nếu có nghĩa là đang ẩn -> Cần hiện ra
+                if (sb.classList.contains('-translate-x-full')) {
+                    sb.classList.remove('-translate-x-full'); // Xóa class ẩn -> Sidebar trượt ra
+                    overlay.classList.remove('hidden');        // Hiện lớp mờ đen
+                } else {
+                    // Nếu không có nghĩa là đang hiện -> Cần ẩn đi
+                    sb.classList.add('-translate-x-full');    // Thêm class ẩn -> Sidebar trượt vào
+                    overlay.classList.add('hidden');           // Ẩn lớp mờ đen
+                }
             }
         };
     </script>
