--- a/student.html
+++ b/student.html
@@ -348,13 +348,23 @@
         }
 
         // --- AUTH & LOAD DATA ---
+        // --- AUTH & LOAD DATA (ĐÃ SỬA LỖI HIỂN THỊ NÚT VÀO HỌC) ---
         onAuthStateChanged(auth, async (user) => {
             if (user) {
                 if (ADMIN_EMAILS.includes(user.email)) { window.location.href = "dashboard.html"; return; }
-                loadSiteLogo(); loadUserProfile(user); loadStudentClasses(user); loadMarket(); loadMyPurchased(user); loadPendingTasks(user); 
                 
-                // THÊM: Tải lịch sử làm bài
+                // 1. Tải các thông tin độc lập
+                loadSiteLogo(); 
+                loadUserProfile(user); 
+                loadStudentClasses(user); 
+                loadPendingTasks(user);
                 loadExamHistory(user);
+
+                // 2. [QUAN TRỌNG] Đợi tải xong danh sách đã mua -> Rồi mới tải Market
+                // Điều này đảm bảo loadMarket biết chính xác khóa nào đã mua để hiện nút "Vào học"
+                await loadMyPurchased(user); 
+                loadMarket(); 
+                
             } else { window.location.href = "index.html"; }
         });
 
