--- a/course-manager.html
+++ b/course-manager.html
@@ -391,7 +391,20 @@
         window.closeConfirm = () => document.getElementById('confirmModal').classList.add('hidden');
 
         // --- MAIN LOAD ---
-        onAuthStateChanged(auth, (user) => { if(!user) window.location.href='index.html'; else loadCourses(); });
+        // --- MAIN LOAD (TỐI ƯU TỐC ĐỘ - PARALLEL LOADING) ---
+        onAuthStateChanged(auth, async (user) => { 
+            if(!user) {
+                window.location.href='index.html'; 
+            } else {
+                // Sử dụng Promise.all để tải song song
+                // Hiện tại chỉ có loadCourses, nhưng sau này bạn thêm loadStats(), loadVouchers()... vào đây thì nó vẫn chạy nhanh vù vù
+                const p1 = loadCourses();
+                
+                // Ví dụ sau này thêm: const p2 = loadRevenueStats();
+                
+                await Promise.all([p1]); 
+            }
+        });
 
         window.loadCourses = async () => {
             try {
