--- a/dashboard.html
+++ b/dashboard.html
@@ -10,7 +10,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
-    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
     <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     
     <style>
@@ -50,7 +49,7 @@
         </div>
         <div class="p-4 border-b border-gray-100 bg-gray-50">
             <div class="flex items-center gap-3 cursor-pointer" onclick="window.openMyProfile()">
-                <img id="sidebarAvatar" src="https://via.placeholder.com/150" class="w-10 h-10 rounded-full border-2 border-white shadow-sm object-cover">
+                <img id="sidebarAvatar" src="https://placehold.co/150" class="w-10 h-10 rounded-full border-2 border-white shadow-sm object-cover">
                 <div class="overflow-hidden"><p id="sidebarName" class="text-sm font-bold text-gray-800 truncate">Đang tải...</p><p id="sidebarRole" class="text-xs text-gray-500 truncate">Quản trị viên</p></div>
             </div>
         </div>
@@ -74,7 +73,7 @@
     <main class="flex-1 flex flex-col overflow-hidden relative w-full">
         <div class="md:hidden h-16 bg-white border-b border-gray-200 flex items-center justify-between px-4 sticky top-0 z-20 shrink-0 shadow-sm">
             <div class="flex items-center gap-3"><button onclick="window.toggleSidebar()" class="text-gray-600 hover:text-orange-500 text-2xl p-1"><i class="fa-solid fa-bars"></i></button><span class="font-handwriting text-orange-600 text-lg">Thầy Choang</span></div>
-            <div onclick="window.openMyProfile()" class="w-9 h-9 rounded-full bg-gray-100 overflow-hidden border border-gray-200 active:scale-95 transition-transform"><img id="mobileAvatar" src="https://via.placeholder.com/150" class="w-full h-full object-cover"></div>
+            <div onclick="window.openMyProfile()" class="w-9 h-9 rounded-full bg-gray-100 overflow-hidden border border-gray-200 active:scale-95 transition-transform"><img id="mobileAvatar" src="https://placehold.co/150" class="w-full h-full object-cover"></div>
         </div>
 
         <div id="view-home" class="view-section flex-1 overflow-y-auto p-4 md:p-8">
@@ -189,7 +188,7 @@
                 <div class="bg-gray-50 p-4 rounded-xl border border-gray-200">
                     <label class="block text-xs font-bold text-gray-500 uppercase mb-2">Logo Website</label>
                     <div class="flex items-center gap-4">
-                        <div class="w-16 h-16 bg-white border border-gray-200 rounded-lg flex items-center justify-center overflow-hidden p-1"><img id="logoPreview" src="https://via.placeholder.com/100" class="w-full h-full object-contain"></div>
+                        <div class="w-16 h-16 bg-white border border-gray-200 rounded-lg flex items-center justify-center overflow-hidden p-1"><img id="logoPreview" src="https://placehold.co/100" class="w-full h-full object-contain"></div>
                         <div class="flex-1"><button onclick="document.getElementById('logoInput').click()" class="px-4 py-2 bg-white border border-gray-300 text-gray-700 rounded-lg text-sm font-bold hover:bg-gray-100 w-full mb-1"><i class="fa-solid fa-cloud-arrow-up"></i> Tải Logo mới</button><input type="file" id="logoInput" class="hidden" accept="image/*" onchange="window.handleLogoUpload(this)"><p class="text-[10px] text-red-500 italic mt-1">* Ảnh vuông (100x100px), nền trong suốt (PNG).</p></div>
                     </div>
                 </div>
@@ -340,7 +339,6 @@
 
         const app = initializeApp(firebaseConfig);
         const auth = getAuth(app);
-        const db = getFirestore(app);
         const db = getFirestore(app);
         const storage = getStorage(app);
         const functions = getFunctions(app);
