--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
             
             // 1. Hiển thị thông tin cơ bản
             document.getElementById('payCourseTitle').innerText = c.title;
-            document.getElementById('payCourseImg').src = c.thumbnail || 'https://via.placeholder.com/150';
+            document.getElementById('payCourseImg').src = c.thumbnail || 'https://placehold.co/150';
             
             // Xử lý hiển thị giá (Format VND)
             let rawPrice = c.price;
