--- a/index.html
+++ b/index.html
@@ -475,23 +475,22 @@
             appId: "1:760187217240:web:d043cd5808c349f87a712d"
         };
         
-        // Khởi tạo Firebase
-        // Khởi tạo Firebase
+        // Khởi tạo Firebase (Đã kích hoạt Cache Offline)
         let app, auth, db;
         try {
              app = initializeApp(firebaseConfig);
              auth = getAuth(app);
              db = getFirestore(app);
 
-             // --- KÍCH HOẠT CACHE OFFLINE (TĂNG TỐC) ---
+             // --- KÍCH HOẠT CACHE: GIÚP LOAD TRANG NGAY LẬP TỨC ---
              enableIndexedDbPersistence(db).catch((err) => {
                  if (err.code == 'failed-precondition') {
-                     console.log('Lỗi: Đang mở quá nhiều tab.');
+                     console.log('Lỗi: Đang mở quá nhiều tab (Chỉ 1 tab được dùng cache).');
                  } else if (err.code == 'unimplemented') {
                      console.log('Trình duyệt không hỗ trợ cache.');
                  }
              });
-        } catch(e) { console.error("Chưa cấu hình Firebase!", e); }
+        } catch(e) { console.error("Lỗi khởi tạo Firebase:", e); }
 
         const googleProvider = new GoogleAuthProvider();
 
