--- a/student.html
+++ b/student.html
@@ -555,24 +555,7 @@
             } catch(e) { console.error(e); }
         }
 
-        async function loadStudentClasses(user) {
-            const container = document.getElementById('myClassesList');
-            try {
-                const q = query(collection(db, "classes"));
-                const snap = await getDocs(q);
-                let html = '';
-                snap.forEach(doc => {
-                    const cl = doc.data();
-                    const students = cl.students || [];
-                    if (students.some(s => (s.email && s.email.toLowerCase() === user.email.toLowerCase()) || (s.uid === user.uid))) {
-                        html += `<div class="bg-white p-6 rounded-2xl shadow-sm border border-teal-50 hover:border-teal-300 hover:shadow-md transition-all cursor-pointer group" onclick="window.openClassDetail('${doc.id}', '${cl.name}')"><div class="flex justify-between mb-4"><div class="w-10 h-10 rounded-xl bg-teal-100 text-teal-600 flex items-center justify-center font-bold"><i class="fa-solid fa-chalkboard"></i></div><i class="fa-solid fa-arrow-right text-gray-300 group-hover:text-teal-500 transition-colors"></i></div><h3 class="font-bold text-xl text-gray-800 mb-1 group-hover:text-teal-700 transition-colors truncate">${cl.name}</h3><p class="text-sm text-gray-500 font-medium mb-4"><i class="fa-solid fa-user-tie mr-1 text-teal-500"></i> GV: ${cl.teacherName || "Thầy Choang"}</p><div class="w-full py-2.5 bg-teal-50 text-teal-700 font-bold text-sm rounded-xl text-center group-hover:bg-teal-600 group-hover:text-white transition-all">Vào lớp học</div></div>`;
-                    }
-                });
-                container.innerHTML = html || '<div class="col-span-full text-center py-12 bg-white rounded-2xl border border-dashed border-gray-300"><p class="text-gray-500 font-bold">Bạn chưa tham gia lớp nào.</p></div>';
-            } catch(e) { console.error(e); }
-        }
-
-        window.openClassDetail = async (classId, className) => {
+                window.openClassDetail = async (classId, className) => {
             window.switchTab('class-detail');
             document.getElementById('detailClassName').textContent = className;
             const container = document.getElementById('classExamList');
@@ -661,6 +644,7 @@
         };
 
         // --- TÌM HÀM loadMyPurchased CŨ VÀ THAY BẰNG ĐOẠN NÀY ---
+        // Dán đoạn này vào (Chỉ 1 lần duy nhất)
         async function loadStudentClasses(user) {
             const container = document.getElementById('myClassesList');
             // HIỆN SKELETON
