--- a/student.html
+++ b/student.html
@@ -832,7 +832,9 @@
 
             let html = '';
             data.forEach(o => {
-                const percent = Math.floor(Math.random() * 90) + 5; 
+                // [FIX] Sửa lỗi nhảy số lung tung
+                // Tạm thời để 0% (chưa học). Sau này khi làm course-player xong, ta sẽ lưu tiến độ vào biến o.progress
+                const percent = o.progress || 0; 
                 
                 if (mode === 'grid') {
                     html += `
