--- a/course-manager.html
+++ b/course-manager.html
@@ -240,10 +240,20 @@
                     </div>
 
                     <div class="flex-1 overflow-y-auto bg-gray-50/50 p-8">
-                        <div id="panelVideo" class="content-panel hidden space-y-6 max-w-4xl mx-auto">
-                            <div class="bg-white p-6 rounded-xl border border-gray-200 shadow-sm">
-                                <label class="block text-sm font-bold text-gray-700 mb-2">Link YouTube</label>
-                                <input type="text" id="videoUrlInput" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-brand outline-none" placeholder="https://www.youtube.com/watch?v=...">
+                       <div id="panelVideo" class="content-panel hidden space-y-6 max-w-4xl mx-auto">
+                            <div class="bg-white p-6 rounded-xl border border-gray-200 shadow-sm space-y-4">
+                                <div>
+                                    <label class="block text-sm font-bold text-gray-700 mb-2">Đường dẫn Video (YouTube)</label>
+                                    <input type="text" id="videoUrlInput" class="w-full px-4 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-brand outline-none" placeholder="https://www.youtube.com/watch?v=...">
+                                </div>
+                                <div>
+                                    <label class="block text-sm font-bold text-gray-700 mb-2">Thời gian xem tối thiểu (Phút)</label>
+                                    <div class="relative">
+                                        <input type="number" id="videoMinTime" value="10" min="0" class="w-full pl-4 pr-12 py-2 border border-gray-300 rounded-lg focus:ring-2 focus:ring-brand outline-none font-mono font-bold" placeholder="10">
+                                        <span class="absolute right-4 top-2 text-gray-400 text-sm font-bold">Phút</span>
+                                    </div>
+                                    <p class="text-xs text-gray-400 mt-1"><i class="fa-solid fa-circle-info mr-1"></i> Học sinh cần xem đủ thời gian này mới được tính là hoàn thành.</p>
+                                </div>
                             </div>
                             <div id="videoPreviewArea" class="aspect-video bg-black rounded-xl overflow-hidden shadow-lg hidden relative"><iframe id="videoFrame" class="w-full h-full" src="" frameborder="0" allowfullscreen></iframe></div>
                         </div>
@@ -754,8 +764,7 @@ function renderCurriculumTree() {
                 type: 'video', 
                 content: '', 
                 isPublished: true,
-                minWatchTime: 10, // [MỚI] Mặc định 10 phút
-                minScore: 5       // [MỚI] Mặc định 5 điểm (cho Quiz)
+                minWatchTime: 10 // [MỚI] Mặc định 10 phút
             });
             renderCurriculumTree();
             selectItem(ci, li, currentCurriculum[ci].lessons[li].items.length - 1);
@@ -790,6 +799,8 @@ function renderCurriculumTree() {
             // Fill Content
             if(data.type === 'video') {
                 document.getElementById('videoUrlInput').value = data.content || '';
+                // [MỚI] Load thời gian xem, nếu không có dữ liệu cũ thì mặc định 10
+                document.getElementById('videoMinTime').value = data.minWatchTime || 10;
                 window.previewVideo(data.content || '');
             } else if (data.type === 'pdf') {
                 if(data.content && data.content.includes('drive.google.com')) {
@@ -809,10 +820,19 @@ function renderCurriculumTree() {
         // Auto Save to State
         document.getElementById('editItemTitle').oninput = (e) => { if(activeItemIdx>-1) currentCurriculum[activeChapIdx].lessons[activeLesIdx].items[activeItemIdx].title = e.target.value; };
         document.getElementById('editItemTitle').onblur = renderCurriculumTree;
+        // Xử lý link Video
         document.getElementById('videoUrlInput').oninput = (e) => { 
             if(activeItemIdx>-1) {
                 currentCurriculum[activeChapIdx].lessons[activeLesIdx].items[activeItemIdx].content = e.target.value;
                 window.previewVideo(e.target.value);
+            }
+        };
+        
+        // [MỚI] Xử lý thời gian xem tối thiểu
+        document.getElementById('videoMinTime').oninput = (e) => {
+            if(activeItemIdx > -1) {
+                // Lưu giá trị vào biến data, nếu trống thì mặc định là 10
+                currentCurriculum[activeChapIdx].lessons[activeLesIdx].items[activeItemIdx].minWatchTime = e.target.value || 10;
             }
         };
         document.getElementById('driveUrlInput').oninput = (e) => {
