--- a/course-manager.html
+++ b/course-manager.html
@@ -522,7 +522,23 @@
 
         // --- EDIT BASIC INFO (MODAL 1 - UPDATED) ---
         // BƯỚC 2: Thay thế 2 hàm này trong thẻ <script>
+// --- HÀM XỬ LÝ ẢNH BÌA (THÊM MỚI ĐỂ SỬA LỖI) ---
+        window.handleThumbUpload = (input) => {
+            const file = input.files[0];
+            if (!file) return;
 
+            // 1. Hiển thị ảnh xem trước ngay lập tức (dùng Blob URL)
+            const previewUrl = URL.createObjectURL(file);
+            document.getElementById('previewThumb').src = previewUrl;
+            
+            // 2. Ẩn trạng thái trống, hiện khung ảnh
+            document.getElementById('thumbPreviewBox').classList.remove('hidden');
+            document.getElementById('thumbEmptyState').classList.add('hidden');
+
+            // 3. Gán giá trị vào ô input ẩn để hàm Lưu (saveCourseBasic) đọc được
+            // Lưu ý: Hiện tại đây là link tạm. Để lưu vĩnh viễn, bạn cần tích hợp thêm Firebase Storage.
+            document.getElementById('cThumb').value = previewUrl;
+        };
 // Hàm tải dữ liệu lên form sửa
 window.editCourse = async (id) => {
     const d = await getDoc(doc(db, "public_courses", id));
