--- a/course-player.html
+++ b/course-player.html
@@ -150,7 +150,7 @@
                 <div id="ytPlayer" class="w-full h-full"></div> <div id="videoTimerOverlay" class="absolute top-4 right-4 bg-black/80 text-white px-4 py-2 rounded-full text-xs font-bold backdrop-blur-md border border-white/10 flex items-center gap-3 shadow-lg z-30 transition-opacity duration-500">
                     <div class="flex items-center gap-2">
                         <i class="fa-solid fa-clock text-orange-500 animate-pulse"></i>
-                        <span class="text-gray-300">Yêu cầu xem:</span>
+                        <span class="text-gray-300">Yêu cầu xem tối thiểu:</span>
                     </div>
                     <span id="timeRemaining" class="text-orange-400 text-sm font-mono">--:--</span>
                 </div>
