--- a/course-player.html
+++ b/course-player.html
@@ -511,10 +511,10 @@
                         btnStart.innerHTML = `Làm bài ngay <br><span class="text-xs font-normal opacity-80">(Yêu cầu: ${minScore}đ - ${statusText})</span>`;
                         btnStart.className = "px-8 py-3 bg-brand text-white font-bold rounded-xl hover:bg-teal-600 transition-all shadow-lg";
                         btnStart.onclick = () => {
-                            if(item.examId) window.location.href = `exam.html?id=${item.examId}&mode=course&courseId=${courseId}`;
+                            // [CẬP NHẬT] Thêm mode=practice để exam.html bỏ qua giới hạn số lần làm bài
+                            if(item.examId) window.location.href = `exam.html?id=${item.examId}&mode=practice&from=course&courseId=${courseId}`;
                             else alert("Chưa có đề thi!");
                         };
-                    }
                 } catch(e) { console.error("Lỗi check quiz:", e); }
             }
             
