--- a/exam.html
+++ b/exam.html
@@ -613,7 +613,11 @@
                 if(document.getElementById('lobbyMaxAttempts')) document.getElementById('lobbyMaxAttempts').innerText = examData.attempts || '∞';
 
                 // 5. Kiểm tra điều kiện vào thi (Thời gian, Số lượt)
+                // 5. Kiểm tra điều kiện vào thi (Thời gian, Số lượt)
                 let ok = true, msg = "Sẵn sàng", color = "text-green-600";
+                
+                // [MỚI] Kiểm tra xem có đang ở chế độ Luyện tập từ khóa học hay không
+                const isPracticeMode = (urlParams.get('mode') === 'practice');
 
                 // Check thời gian
                 const now = new Date();
@@ -625,9 +629,17 @@
                 if(examData.endTime && now > new Date(examData.endTime)) { 
                     ok=false; msg="Đề thi đã đóng"; color="text-red-500"; 
                 }
-                // Check số lượt
-                if(examData.attempts > 0 && att >= examData.attempts) { 
+
+                // Check số lượt - [CẬP NHẬT] Nếu là Practice Mode thì bỏ qua giới hạn
+                if(!isPracticeMode && examData.attempts > 0 && att >= examData.attempts) { 
                     ok=false; msg="Hết lượt làm bài"; color="text-red-500"; 
+                }
+
+                // Hiển thị thông tin đặc biệt nếu đang luyện tập
+                if(isPracticeMode) {
+                    msg = "Chế độ luyện tập (Không giới hạn số lượt)";
+                    color = "text-blue-600";
+                    if(document.getElementById('lobbyMaxAttempts')) document.getElementById('lobbyMaxAttempts').innerText = '∞ (Luyện tập)';
                 }
 
                 // Cập nhật trạng thái UI
