--- a/course-player.html
+++ b/course-player.html
@@ -511,7 +511,8 @@
                         btnStart.innerHTML = `Làm bài ngay <br><span class="text-xs font-normal opacity-80">(Yêu cầu: ${minScore}đ - ${statusText})</span>`;
                         btnStart.className = "px-8 py-3 bg-brand text-white font-bold rounded-xl hover:bg-teal-600 transition-all shadow-lg";
                         btnStart.onclick = () => {
-                            if(item.examId) window.location.href = `exam.html?id=${item.examId}&mode=course&courseId=${courseId}`;
+                            // Thêm &mode=practice để bỏ qua giới hạn lượt làm khi học từ khóa học
+                            if(item.examId) window.location.href = `exam.html?id=${item.examId}&mode=course&courseId=${courseId}&mode=practice`;
                             else alert("Chưa có đề thi!");
                         };
                     }
