--- a/exam.html
+++ b/exam.html
@@ -629,7 +629,7 @@
                 if(examData.endTime && now > new Date(examData.endTime)) { 
                     ok=false; msg="Đề thi đã đóng"; color="text-red-500"; 
                 }
-
+                const isPracticeMode = (urlParams.get('mode') === 'practice');
                 // Check số lượt - [CẬP NHẬT] Nếu là Practice Mode thì bỏ qua giới hạn
                 if(!isPracticeMode && examData.attempts > 0 && att >= examData.attempts) { 
                     ok=false; msg="Hết lượt làm bài"; color="text-red-500"; 
