--- a/exam.html
+++ b/exam.html
@@ -620,6 +620,7 @@
                 const isPracticeMode = (urlParams.get('mode') === 'practice');
 
                 // Check thời gian
+                // Check thời gian
                 const now = new Date();
                 if(examData.startTime && now < new Date(examData.startTime)) { 
                     ok=false; msg="Chưa đến giờ mở đề"; color="text-orange-500"; 
@@ -629,10 +630,22 @@
                 if(examData.endTime && now > new Date(examData.endTime)) { 
                     ok=false; msg="Đề thi đã đóng"; color="text-red-500"; 
                 }
+
+                // --- LOGIC CẬP NHẬT: PHÂN BIỆT NGUỒN TRUY CẬP ---
                 const isPracticeMode = (urlParams.get('mode') === 'practice');
-                // Check số lượt - [CẬP NHẬT] Nếu là Practice Mode thì bỏ qua giới hạn
+
+                // Chỉ kiểm tra số lượt nếu KHÔNG phải chế độ luyện tập từ khóa học
                 if(!isPracticeMode && examData.attempts > 0 && att >= examData.attempts) { 
                     ok=false; msg="Hết lượt làm bài"; color="text-red-500"; 
+                }
+
+                // Cập nhật giao diện nếu đang ở chế độ luyện tập
+                if(isPracticeMode) {
+                    msg = "Chế độ luyện tập (Không giới hạn lượt làm)";
+                    color = "text-blue-600";
+                    if(document.getElementById('lobbyMaxAttempts')) {
+                        document.getElementById('lobbyMaxAttempts').innerText = '∞ (Luyện tập)';
+                    }
                 }
 
                 // Hiển thị thông tin đặc biệt nếu đang luyện tập
