--- a/exam.html
+++ b/exam.html
@@ -621,6 +621,10 @@
 
                 // Check thời gian
                 // Check thời gian
+                // Gán lại giá trị cho isPracticeMode (không dùng const vì đã khai báo ở trên)
+                isPracticeMode = (urlParams.get('mode') === 'practice');
+
+                // Check thời gian
                 const now = new Date();
                 if(examData.startTime && now < new Date(examData.startTime)) { 
                     ok=false; msg="Chưa đến giờ mở đề"; color="text-orange-500"; 
@@ -631,21 +635,16 @@
                     ok=false; msg="Đề thi đã đóng"; color="text-red-500"; 
                 }
 
-                // --- LOGIC CẬP NHẬT: PHÂN BIỆT NGUỒN TRUY CẬP ---
-                const isPracticeMode = (urlParams.get('mode') === 'practice');
-
-                // Chỉ kiểm tra số lượt nếu KHÔNG phải chế độ luyện tập từ khóa học
+                // Check số lượt - [CẬP NHẬT] Nếu là Practice Mode thì bỏ qua giới hạn
                 if(!isPracticeMode && examData.attempts > 0 && att >= examData.attempts) { 
                     ok=false; msg="Hết lượt làm bài"; color="text-red-500"; 
                 }
 
-                // Cập nhật giao diện nếu đang ở chế độ luyện tập
+                // Hiển thị thông tin đặc biệt nếu đang luyện tập
                 if(isPracticeMode) {
-                    msg = "Chế độ luyện tập (Không giới hạn lượt làm)";
+                    msg = "Chế độ luyện tập (Không giới hạn số lượt)";
                     color = "text-blue-600";
-                    if(document.getElementById('lobbyMaxAttempts')) {
-                        document.getElementById('lobbyMaxAttempts').innerText = '∞ (Luyện tập)';
-                    }
+                    if(document.getElementById('lobbyMaxAttempts')) document.getElementById('lobbyMaxAttempts').innerText = '∞ (Luyện tập)';
                 }
 
                 
